<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Device Name"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/deviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="20sp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Device IP Address"
        android:textColor="@color/darkGrey"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/deviceIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="20sp"/>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Device Port Number"
        android:textColor="@color/darkGrey"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/devicePort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="20sp"/>
    <TextView
        android:id="@+id/textView6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Device ON String Command"
        android:textColor="@color/darkGrey"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/onCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="20sp"/>
    <TextView
        android:id="@+id/textView7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Device OFF String Command"
        android:textColor="@color/darkGrey"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/offCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="20sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/addDeviceClicked"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:textColor="@color/darkGreen"
            android:text="+"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>
