<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/get_room_view"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" Enter Room Name"
        android:textSize="30sp"
        android:textColor="@color/darkGreen"/>

    <EditText
        android:id="@+id/roomName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:layout_marginTop="20sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60sp">

        <Button
            android:id="@+id/addButtonClicked"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:textColor="@color/darkGreen"
            android:text="+"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>
