<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


    <item
        android:id="@+id/addRoom"
        android:icon="@drawable/add"
        android:title="Add new room"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/app_bar_switch"
        android:title="Teestiinnngg"
        app:actionLayout="@layout/switch_item" />

</menu>